<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_padding" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical" >

		<LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left">
	
	        <Button
	            android:id="@+id/action_server_toogle"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:text="@string/BUTTON_server_start" />

		    <LinearLayout
		        android:orientation="horizontal"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent">
		
		        <TextView
		            android:id="@+id/server_status"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:gravity="center"
		            android:shadowColor="@android:color/holo_orange_dark"
		            android:shadowDx="2"
		            android:shadowDy="5"
		            android:shadowRadius="13"
		            android:text="@string/domain_server_status_stopped"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    	</LinearLayout>
	    </LinearLayout>
	
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:orientation="horizontal" >
	
		    <TextView
		        android:id="@+id/server_public_info"
		        android:layout_weight="1"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:autoLink="web|none"
		        android:gravity="center"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
	
		    <ImageButton
		        android:id="@+id/action_share_server_info"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        style="?android:attr/buttonStyleSmall"
		        android:enabled="false"
		        android:src="@android:drawable/ic_menu_share"
		        android:contentDescription="@string/share_server_info" />
	
		</LinearLayout>
	    
	    <LinearLayout
	        android:orientation="horizontal"
	        android:gravity="left"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">

		    <ImageButton 
	            android:id="@+id/about"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        style="?android:attr/buttonStyleSmall"
		        android:src="@android:drawable/ic_menu_info_details"
		        android:contentDescription="@string/show_about" />
	        	
		    <LinearLayout
		        android:orientation="horizontal"
		        android:gravity="right"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		        
		        <Button
		            android:id="@+id/action_show_transfert"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/domain_activity" />
		        <Button
		            android:id="@+id/action_show_log"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/domain_log" />
			</LinearLayout>
		</LinearLayout>
	    
	</LinearLayout>
    
    <LinearLayout
        android:id="@+id/share"
        android:orientation="vertical"
        android:gravity="right"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="right|center_vertical"
	        android:orientation="horizontal" >

	        <TextView
		        android:layout_width="fill_parent"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/domain_shares"
	            android:textAppearance="?android:attr/textAppearanceLarge" />

	        <ImageButton
	            android:id="@+id/action_add_share"
	            style="?android:attr/buttonStyleSmall"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/add_share"
	            android:src="@android:drawable/ic_input_add" />
	    </LinearLayout>

		<ListView
		    android:id="@+id/shared_files"
		    android:layout_width="match_parent"
		    android:layout_height="fill_parent"
		    android:clickable="true"
		    android:fadingEdgeLength="5dp" >

	    </ListView>

	</LinearLayout>


</LinearLayout>